--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -9,7 +9,7 @@
     <style>
       p {
         color: white;
-        color-background: #00ff00;
+        background-color: green;
         font-size: 18px;
       }
     </style>
@@ -17,6 +17,6 @@
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button style="color-background: orage; font-size: 18px;>Inline Method</button>
+    <button style="background-color: orange; font-size: 18px;">Inline Method</button>
   </body>
 </html>
